# typecraft

./: .gitignore  LICENSE  Makefile  stack.yaml  typecraft.cabal
assets/gareth/: gareth.autosave.scml  gareth.scon
assets/gareth/raw/: gareth.xcf
maps/: 2ktownset.tsx  hoth.tmx  mindfuck.tmx  rpg2k.tmx  rules.txt  untitled.tmx  untitled2.tmx  wc2.tmx
maps/rules/: rules1.tmx  rules2.tmx
src/: AbilityUtils.hs  AnimBank.hs  Art.hs  Behavior.hs  Behavior.hs-boot  Client.hs  Collision.hs  Constants.hs  GameData.hs  Main.hs  Map.hs  Overture.hs  Types.hs  Utils.hs
src/Behavior/: Scripts.hs
src/QuadTree/: QuadTree.hs
