name:                typecraft
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Sandy Maguire
maintainer:          sandy@sandymaguire.me
-- copyright:
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable typecraft
  main-is:             Main.hs
  -- other-modules:
  default-extensions: DataKinds
                    , FlexibleInstances
                    , GADTs
                    , PolyKinds
                    , RecordWildCards
                    , ScopedTypeVariables
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , ViewPatterns

  build-depends: base
               , astar
               , base-prelude
               , constraints
               , containers
               , unordered-containers
               , data-default
               , frpnow
               , htiled
               , aeson-tiled
               , lens
               , linear
               , mtl
               , recursion-schemes
               , sequoia
               , th-dict-discovery
               , transformers
               , QuadTree
  hs-source-dirs:      src
  default-language:    Haskell2010

